# ghg-calculator

./: README.md  pyproject.toml
examples/: advanced_usage.py  basic_usage.py
ghg_emissions/: __init__.py  cli.py  models.py
ghg_emissions/calculator/: __init__.py  calculator.py
ghg_emissions/data/: factors.csv
ghg_emissions/factors/: __init__.py  loader.py
ghg_emissions/gui/: __init__.py  app.py  models.py  utils.py
ghg_emissions/plugins/: __init__.py  base.py  manager.py
ghg_emissions/reporting/: __init__.py  generator.py
tasks/subtasks/ghg-emissions-calculator/: 01-setup-package-structure.md  02-define-core-data-structures.md  03-implement-emission-calculator.md  04-add-standard-emission-factors.md  05-implement-report-generator.md  06-add-plugin-system.md  07-write-unit-tests.md  08-create-documentation.md  09-add-example-scripts.md
tests/: test_calculator.py  test_factors.py  test_gui.py  test_integration.py  test_models.py  test_plugins.py  test_reporting.py
