[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghg-emissions"
version = "0.1.0"
description = "Modular GHG emissions calculator with standard factors"
authors = [{name = "OpenAgent"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "pydantic>=2.0.0",
    "jinja2>=3.0.0",
    "reportlab>=4.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black", "isort", "mypy"]
docs = ["sphinx>=5.0.0", "sphinx-rtd-theme"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ghg_emissions*"]

[project.scripts]
ghg-calculator = "ghg_emissions.cli:main"

[project.entry-points."ghg_emissions.factors"]
# Entry points for factor providers

[project.entry-points."ghg_emissions.calculators"]
# Entry points for calculator plugins

[tool.setuptools.package-data]
"ghg_emissions" = ["data/*.csv", "data/*.json"]